src/test/deca/etapeB/invalid/print_boolean.deca
// Description : 
// 	test de print d'un boolean 
//Resultat:
//      Erreur Contextuelle : print ne peut etre appelé que sur int,string,float
{
print(true);
}